--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,6 @@
   color: #434455;
   background-color: #ffffff;
 }
-a {
-    text-decoration: none;
-  }
   ul {
     list-style-type: none;
   }
@@ -16,7 +13,7 @@ a {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
-    line-height: 117%;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
@@ -24,45 +21,144 @@ a {
 .logo-studio { 
 color: #2e2f42;
 }
+.address {
+  font-style: normal;
+}
 .header-list {
+  font-family: "roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
-line-height: 150%;
+line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
+.header-list:hover,
+.header-list:focus {
+  color: #404bbf;
+}
+
 .contacts-text {
+  font-family: "roboto", sans-serif;
     font-weight: 400;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     font-style: normal;
 }
+.contacts-text:hover,
+.contacts-text:focus {
+  color: #404bbf;
+}
 .solutions-img {
-    width: 1440px;
-height: 600px;
 background: #2e2f42;
 }
 .solutions-text {
+  font-family: "roboto", sans-serif;
 font-weight: 700;
 font-size: 56px;
-line-height: 107%;
+line-height: 1.7;
 letter-spacing: 0.02em;
 text-align: center;
 color: #fff;
 }
 .solutions-button {
+  font-family: "roboto", sans-serif;
     background: #4d5ae5;
     color: #ffffff;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: left;
   }
-  .solutions-button:hover {
+  .solutions-button:hover, 
+  .solutions-button:focus{
     background-color: #404bbf;
   }
-  
+.features-header {
+  font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+  .features-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+  }
+  .team-header {
+    background: #f4f4fd;
+  }
+  .team-text {
+    font-family: "Roboto", sans-serif;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+text-transform: capitalize
+  }
+  .team-name {
+    font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+background-color: #FFFFFF
+  }
+  .team-descr {
+    font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
+  }
+  .portfolio {
+    font-family: "Roboto", sans-serif;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+text-transform: capitalize
+}
+.portfolio-text {
+  font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.portfolio-descr {
+  font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+.footer {
+  background: #2e2f42;
+}
+.footer-descr {
+  font-family: "Roboto", sans-serif;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+}
