--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,14 @@
     text-transform: uppercase;
     color: #4d5ae5;
 }  
-.logo-studio { 
-color: #2e2f42;
+.logo-studio-head { 
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
 }
 .address {
   font-style: normal;
@@ -160,5 +166,14 @@ font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
+color: #f4f4fd;
+}
+.logo-studio-foot {
+  font-family: "Raleway", sans-serif;
+font-weight: 700;
+font-size: 18px;
+line-height: 117%;
+letter-spacing: 0.03em;
+text-transform: uppercase;
 color: #f4f4fd;
 }
