--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,8 @@ line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-text-transform: capitalize
+text-transform: capitalize;
+background-color: #FFFFFF
   }
   .team-name {
     font-family: "Roboto", sans-serif;
@@ -133,6 +134,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
+background-color: #FFFFFF
   }
   .portfolio {
     font-family: "Roboto", sans-serif;
