--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ color: #2e2f42;
     background: #f4f4fd;
   }
   .team-list {
-    background-color: #FFFFFF
+    background-color: #ffffff
   }
   .team-text {
     font-family: "Roboto", sans-serif;
@@ -114,7 +114,7 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
-background-color: #FFFFFF
+background-color: #ffffff
   }
   .team-name {
     font-family: "Roboto", sans-serif;
@@ -124,7 +124,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-background-color: #FFFFFF
+background-color: #ffffff
   }
   .team-descr {
     font-family: "Roboto", sans-serif;
@@ -134,7 +134,7 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
 color: #434455;
-background-color: #FFFFFF
+background-color: #ffffff
   }
   .portfolio {
     font-family: "Roboto", sans-serif;
