--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ color: #2e2f42;
   .team-header {
     background: #f4f4fd;
   }
-  .team-list {
+  .team-img {
     background-color: #FFFFFF;
   }
   .team-text {
