--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
-.body {
+body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #ffffff;
 }
-  ul {
-    list-style-type: none;
+ ul { 
+   list-style-type: none;
+    }
+a { 
+  text-decoration: none;
+color: none
   }
   p {
     text-align: left;
